--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 		mobileData = await removeEmptyRows(mobileData);
 		async function removeEmptyRows(arr) {
 			for (let i = arr.length - 1; i >= 0; i--) {
-				if (arr[i].pixels == "")
+				// remove blank lines
+				if (arr[i].pixels == "" || arr[i].pixels[0] == "*")
 					arr.splice(i, 1);
 			}
 			return arr;
