--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 	<main>
 		<form id="controls" class="controls">
 			<div>
+				Display Resolutions
+				<a href="https://github.com/omundy/display-resolutions" target="_blank">
+					<img src="assets/img/icons8-github-30.png" alt="github logo" style="max-width: 28px; margin: 0 0 0 5px; vertical-align: -9px; opacity: .8;">
+				</a>
+			</div>
+			<div class="mtop">
 				<label for="screens">screens</label>
 				<label class="switch">
 					<input type="checkbox" id="screens">
@@ -39,11 +45,12 @@
 				<label for="scale">scale</label>
 				<input type="range" id="scale" min=".1" max="2.0" step="0.01" value="1">
 				<input type="text" id="scaleDisplay" value="1" class="val">
-				<button class="saveSVG" style="margin-left: 1rem;">download</button>
+				<button class="saveSVG" style="margin-left: 1rem;">download svg</button>
 			</div>
 		</form>
 		<!-- SVG height always fits the element, while viewbox 100 100 makes all numbers relative to % -->
-		<svg width="3840" height="2400" viewBox="0 0 3840 2400" style="font-family: sans-serif;" xmlns="http://www.w3.org/2000/svg"></svg>
+		<svg id="viz" width="3840" height="2400" viewBox="0 0 3840 2400" style="font-family: sans-serif;" xmlns="http://www.w3.org/2000/svg"></svg>
+		
 	</main>
 
 	<script type="module">
@@ -69,7 +76,7 @@
 		// console.log(PALETTE_ARR, screensData.length, mobileData);
 
 		// references
-		const svg = document.querySelector('svg');
+		const viz = document.querySelector('#viz');
 		const controlsEle = document.querySelector('#controls');
 		const scaleEle = document.querySelector('#scale');
 		const scaleDisplayEle = document.querySelector('#scaleDisplay');
@@ -144,7 +151,7 @@
 							font-size="${fontSize}" text-anchor="end"
 							transform ="translate(${x - 4},${y - 4})">${data[i].name} ${data[i].aspectRatio} ${w}x${h}</text>`;
 			}
-			svg.innerHTML = output;
+			viz.innerHTML = output;
 		}
 
 		function getColor(index) {
@@ -178,7 +185,7 @@
 		}
 		document.querySelector(".saveSVG").addEventListener("click", function (e) {
 			e.preventDefault();
-			let str = `<?xml version="1.0" encoding="utf-8" ?>${svg.outerHTML}`;
+			let str = `<?xml version="1.0" encoding="utf-8" ?>${viz.outerHTML}`;
 			// console.log("str", str);
 			downloadStringAsFile(filename, str);
 		}, false);
